--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Poppins&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2? family=Gruppo&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -19,13 +19,13 @@
             <li>Courses</li> 
             <li>Blog</li>
         </ul>
-        <button class="button1">Contact Us</button>
+        <button class="button1" type="submit">Contact Us</button>
     </header>
     <div id="section1">
         <div class="hero">
         <h1>Start learning with us now</h1><br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero dolore aut autem ipsum, nulla asperiores ab? Ipsam accusamus dignissimos aut corporis molestias, architecto quo fugit voluptas impedit culpa sunt sapiente.</p><br>
-        <button class="button2">Start Learning</button>
+        <button class="button2" type="submit">Start Learning</button>
         </div>
         <div class="hero">
             <img src="./images/img 2.svg">
@@ -62,17 +62,17 @@
     </div>
 
     <div id="section5">
-        <!-- <img src="./images/img 5.svg"> -->
+        <img src="./images/img 5.svg">
     </div>
-    <footer id="footer">
+    <footer >
+        <div id="footer" >
         <div >
-            <!-- <img src="./images/img 1.svg" 
-              style="width: 135px; height: 59px; top: 3300px;
-              left: 161px; justify-content: center; padding:center;">  -->
+            <img src="./images/img 1.svg"> 
         </div>
+
         <div>
             <h4>Follow Us</h4>
-            <ul>
+            <ul class="footer1">
                 <li><img src="./images/footer images/et_twitter.svg"></li>
                 <li><img src="./images/footer images/et_linkedin.svg"></li>
                 <li><img src="./images/footer images/circum_facebook.svg"></li>
@@ -80,22 +80,29 @@
             </ul>
         </div>
 
-        <div>
+        <div class="footer2">
             <h4>Useful Links</h4>
-            <ul>
-                <li>Our Projects</li>
-                <li>FAQs</li>
-                <li>News and Updates</li>
+            <ul class="footer2">
+                <li> <a href="">Our Projects</a></li>
+                <li> <a href="">FAQs</a></li>
+                <li> <a href="">News and Updates</a></li>
             </ul>
         </div>
-        <div>
+        <div class="footer3">
             <h4>Contacts</h4>
+            <ul class="footer3">
             <li>Address : 4-5 Main road , Delhi</li>
             <li>Email : educare@gmail.com</li>
-            <li> Phone Number : +91 4533433265</li>
+            <li>Phone Number : +91 4533433265</li>
+            </ul>
+        </div>
+    </div>
+        <div class="copyright">
+            <p><img src="./images/footer images/Vector.svg">All Copyrights reserved. </p>
+        </div>
+    </footer>
         </div>
        
-        <!-- <p>Copyright &copy; Online Centres | All rights reserved</p> -->
-    </footer>
+       
 </body>
 </html>
