Changed the scrollbar settings

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <div id="section5">
-        <img src="./images/img 5.svg">
+        <img src="./images/img 5.svg"> 
     </div>
     <footer >
         <div id="footer" >
@@ -71,7 +71,7 @@
         </div>
 
         <div>
-            <h4>Follow Us</h4>
+            <h4 class="footerh4">Follow Us</h4>
             <ul class="footer1">
                 <li><img src="./images/footer images/et_twitter.svg"></li>
                 <li><img src="./images/footer images/et_linkedin.svg"></li>
